--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "postinstall": "curl -s https://raw.githubusercontent.com/reactorcore/pomander/master/bin/install | bash"
   },
   "dependencies": {
+    "babel-preset-env": "^1.7.0",
     "bootstrap": "^4.0.0-alpha.2",
     "jquery": "^2.2.1",
     "lodash": "^4.6.1",
@@ -20,6 +21,7 @@
     "babel-cli": "^6.6.5",
     "babel-plugin-react": "1.0.0",
     "babel-preset-react": "^6.5.0",
+    "babel-watch": "^2.0.8",
     "chai": "^3.5.0",
     "mocha": "2.3.3",
     "sinon": "1.17.3"
