--- a/package.json
+++ b/package.json
@@ -7,10 +7,14 @@
   "private": true,
   "scripts": {
     "test": "live-server --open=./SpecRunner.html --port=8081",
-    "postinstall": "curl -s https://raw.githubusercontent.com/reactorcore/pomander/master/bin/install | bash"
+    "postinstall": "curl -s https://raw.githubusercontent.com/reactorcore/pomander/master/bin/install | bash",
+    "start": "babel-watch src/index.js"
   },
   "dependencies": {
-    "bootstrap": "^4.0.0-alpha.2",
+    "babel-preset-env": "^1.7.0",
+    "babel-watch": "^2.0.8",
+    "bootstrap": "^4.2.1",
+    "babel-core": "^6.26.3",
     "jquery": "^2.2.1",
     "lodash": "^4.6.1",
     "react": "^0.14.7",
