--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "dependencies": {
     "babel-preset-env": "^1.7.0",
-    "bootstrap": "^4.0.0-alpha.2",
+    "bootstrap": "^4.2.1",
     "jquery": "^2.2.1",
     "lodash": "^4.6.1",
     "react": "^0.14.7",
